--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
   
+::-webkit-scrollbar {
+    width: 1px;
+    background-color: black;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #65a30d;
+    border-radius: 10px;
+}
 *{
     font-family:georgia, serif;
     
