--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -75,3 +75,22 @@ h2 {
      .animate-spin-slow {
        animation: spin-slow 3s linear infinite;
      }
+
+/* 
+loader logo  */
+
+@keyframes expand {
+  0% {
+      width: 0;
+  }
+  50% {
+      width: 100px;
+  }
+  100% {
+      width: 0;
+  }
+}
+
+.animate-expand {
+  animation: expand 2s infinite;
+}
